--- a/src/index.css
+++ b/src/index.css
@@ -1,4 +1,4 @@
-/* index.css */
+/* src/index.css */
 
 body {
   margin: 0;
@@ -30,7 +30,7 @@ textarea {
   margin: 10px;
 }
 
-.Navbar {
+nav {
   background: #515f7d;
   color: white;
   padding: 0px 20px;
@@ -40,7 +40,7 @@ textarea {
   padding: 5px;
 }
 
-.Navbar li {
+nav li {
   list-style: none;
   color: white;
   font-size: 24px;
@@ -63,8 +63,10 @@ textarea {
 }
 
 .EditProjectPage,
-.CreateProjectPage,
-.AddTask {
+.AddProject,
+.AddTask,
+.SignupPage,
+.LoginPage {
   background: #f9eec3;
   border: 1px solid grey;
   box-shadow: 0px 2px 3px grey;
@@ -80,16 +82,27 @@ textarea {
   background-color: rgb(239, 196, 88);
 }
 
+.SignupPage,
+.LoginPage {
+  background-color: #608dd5;
+}
+
+.LoginPage {
+  background-color: #94a7c8;
+}
+
 .EditProjectPage form,
 .AddTask form,
-.CreateProjectPage form {
+.AddProject form,
+.SignupPage form,
+.LoginPage form {
   display: flex;
   flex-direction: column;
   align-items: center;
 }
 
 .AddTask button,
-.CreateProjectPage button {
+.AddProject button {
   display: block;
 }
 
